--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/snailychat/backend#readme",
   "dependencies": {
+    "randomatic": "^3.1.1",
     "ws": "^7.5.3"
   }
 }
